# Where-Fire-Remembers

./: .editorconfig  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  bootstrap.sh  config.h  config.h.in  configure  configure.ac  libtool  ltmain.sh
common/: Makefile.am  Makefile.in  print.c
include/: Makefile.am  Makefile.in  libmemfiry.h
libfiry/: Makefile.am  Makefile.in  firy_print.c
m4/: ltversion.m4
src/: Makefile  Makefile.am  Makefile.in  main.c
